--- a/root-fitter/Makefile
+++ b/root-fitter/Makefile
@@ -1,11 +1,9 @@
-ROOTSYS=Users/user/ROOT-minuit/root_build #TODO
-
 CC=`root-config --cxx`
 CFLAGS=`root-config --cflags` -g -Wall
 LDFLAGS=`root-config --glibs` -lMinuit2 -lRooStats -lRooFit  -lRooFitCore
-SOURCES=Mu2eAna.cc MyDict.cc
+SOURCES=Mu2eAna.cc  Likelihood.cc MyDict.cc
 OBJECTS=$(SOURCES:.cc=.o)
-HEADERS=Mu2eAna.hh
+HEADERS=Mu2eAna.hh  Likelihood.hh RooPol58.hh
 EXECUTABLE=Mu2eAna
 
 all: $(EXECUTABLE)
